# 525next-steps

./: .gitignore  _quarto.yml  data.qmd  demo-guide.qmd  index.qmd  infra.qmd  pyproject.toml
.github/workflows/: publish.yml
demos/bruin-pipeline/: .bruin.yml  generate_data.py  pipeline.yml  run_demo.sh
demos/bruin-pipeline/assets/: monthly_summary.sql  raw_reviews.sql
demos/sql-on-cluster/: 01_duckdb_s3.py  02_duckdb_limits.py  03_spark_sql.py  04_spark_ml.py  05_spark_fail.py  DEMO_FLOW.md  pyproject.toml  setup.sh
img/: diagram-bruin-run1.puml  diagram-bruin-run2.puml  diagram-bruin-run3-fail.puml  diagram-cluster-access.puml  diagram-infra-overview.puml
infra/: batch_user_summary.py  bootstrap_spark.sh  create_gateway.sh  create_spark_cluster.sh  create_trino_cluster.sh  make_data_public.sh  transient_step.sh
lab-1-bruin/: pipeline.yml
lab-1-bruin/assets/: export_summary.sql  grade_summary.sql  raw_products.sql
lab-2-ec2/: pipeline.yml
lab-2-ec2/assets/: export_summary.sql  grade_summary.sql  load_food.sql
lab-3-embeddings/: embed_sample.py  embed_to_duckdb.py  search.py
labs/: lab1-local-pipeline.qmd  lab2-cloud-analytics.qmd  lab3-llm-embeddings.qmd  lab4-sql-at-scale.qmd
project/: index.qmd
project-food-report/: pipeline.yml  train_model.py
project-food-report/assets/: embed_products.py  ingest_products.py  nutrition_summary.sql  raw_products.sql  suspicious_products.sql
project-food-report/report/: report.qmd
project/img/: pipeline-overview.puml
