[project]
name = "dsci525-practice-labs"
version = "0.1.0"
description = "Self-paced practice labs for DSCI 525"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2",
    "pyarrow>=18.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "openai>=1.60",
    "pydantic>=2.10",
    "httpx>=0.28",
    "jupyter>=1.1.1",
    "pyyaml>=6.0.3",
    "boto3",
    "ipykernel",
]

[project.optional-dependencies]
report = [
    "matplotlib>=3.9",
    "jupyter",
]
